--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,13 @@
 
 main a,
 main strong {
-  color: rgb(170, 169, 169);
+  color: #49DCB1;
 }
 
 span a {
-  color: white;
+  color: #49DCB1;
   position: relative;
-  color: #FFFFFF;
+  color: #49DCB1;
   text-decoration: none;
 }
 
@@ -46,7 +46,7 @@ span a::after {
   height: 1px;
   bottom: 0;
   left: 0;
-  background-color: white;
+  background-color: #49DCB1;
   transform-origin: bottom left;
   transition: transform 0.25s ease-out;
 }
@@ -57,7 +57,7 @@ span a:hover::after {
 }
 
 .header a {
-  color: rgb(212, 212, 212) !important;
+  color: #FFFFFF !important;
 }
 
 
@@ -72,11 +72,11 @@ span a:hover::after {
 
 /* Handle Color */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #DC4974;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #DC4974;
 }
