--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  body {
-    @apply bg-black text-white select-none;
-    background: url("https://www.toptal.com/designers/subtlepatterns/uploads/papyrus-dark.png")
-      repeat 0 0;
-    -webkit-animation: bg-scrolling-reverse 0.92s infinite;
-    -moz-animation: bg-scrolling-reverse 0.92s infinite;
-    -o-animation: bg-scrolling-reverse 0.92s infinite;
-    animation: bg-scrolling-reverse 0.92s infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
-    -o-animation-timing-function: linear;
-    animation-timing-function: linear;
-  }
+@font-face {
+  font-family: "sketch";
+  src: url("../../public/fonts/FrederickatheGreat-Regular.ttf");
+}
+
+body {
+  background: url("../../public/images/bg.png");
+  font-family: "sketch";
 }
 
 .swiper-slide {
@@ -114,9 +108,6 @@ span a:hover::after {
   background: #dc4974;
 }
 
-/*Floating Circles*/
-@import url(https://fonts.googleapis.com/css?family=Exo:100);
-/* Background data (Original source: https://subtlepatterns.com/grid-me/) */
 /* Animations */
 @-webkit-keyframes bg-scrolling-reverse {
   100% {
