--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,13 +32,12 @@ body {
 
 main a,
 main strong {
-  color: #49dcb1;
+  color: slateblue;
 }
 
 span a {
-  color: #49dcb1;
+  color: slateblue;
   position: relative;
-  color: #49dcb1;
   text-decoration: none;
 }
 
@@ -49,7 +48,7 @@ span a::after {
   height: 1px;
   bottom: 0;
   left: 0;
-  background-color: #49dcb1;
+  background-color: slateblue;
   transform-origin: bottom left;
   transition: transform 0.25s ease-out;
 }
@@ -69,7 +68,7 @@ span a:hover::after {
   position: absolute;
   top: 0;
   left: 0;
-  background: #49dcb1;
+  background: slateblue;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -80,8 +79,8 @@ span a:hover::after {
 }
 
 .glow:hover {
-  color: #49dcb1;
-  text-shadow: 0 0 5px #49dcb1;
+  color: slateblue;
+  text-shadow: 0 0 5px blue;
 }
 
 .header a {
@@ -107,6 +106,7 @@ span a:hover::after {
 ::-webkit-scrollbar-thumb:hover {
   background: #dc4974;
 }
+
 
 /* Animations */
 @-webkit-keyframes bg-scrolling-reverse {
